limpieza de elemento, comienzo con css-tailwind

--- a/src/index.css
+++ b/src/index.css
@@ -9,7 +9,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  background-color: #18171f;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -18,46 +18,61 @@
 }
 
 a {
-  font-weight: 500;
+  font-weight: 400;
   font-size: 1.5rem;
   margin: 24px;
-  color: #646cff;
+  color: #f1f0e8;
   text-decoration: inherit;
 }
 a:hover {
-  color: #535bf2;
+  color: #d1aa0c;
 }
 
 body {
   margin: 0;
+  width: 100vw;
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
 }
 
 h1 {
-  font-size: 3.2em;
+  font-size: 3.5em;
   line-height: 1.1;
+}
+P {
+  font-size: 1.5em;
+  line-height: 1.5;
+  margin-top: 0;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  padding: 0.6em 1.2em;
+  margin-top: 18px;
+  padding: 0.6em 2.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
+  background-color: #ffcc00aa;
   cursor: pointer;
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: #1d1701aa;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
+}
+
+#logo-yellow:hover {
+  filter: drop-shadow(0 0 2em #ffcc00aa);
+  width: auto;
+}
+#logo-yellow {
+  transition: filter 300ms;
+  height: 48px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -66,7 +81,7 @@ button:focus-visible {
     background-color: #ffffff;
   }
   a:hover {
-    color: #747bff;
+    color: #ffcc00aa;
   }
   button {
     background-color: #f9f9f9;
