estilos de la aplicacin finales

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
@@ -9,7 +7,7 @@
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
-  background-color: #18171f;
+  background-color: #0b0f22;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -17,62 +15,49 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
-a {
+body {
+  margin: 0;
+  width: 100%;
+  min-height: 100vh;
+}
+
+nav a,
+header a {
   font-weight: 400;
   font-size: 1.5rem;
-  margin: 24px;
   color: #f1f0e8;
   text-decoration: inherit;
 }
-a:hover {
+
+nav a:hover,
+header a:hover {
   color: #d1aa0c;
-}
-
-body {
-  margin: 0;
-  width: 100vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-}
-
-h1 {
-  font-size: 3.5em;
-  line-height: 1.1;
-}
-P {
-  font-size: 1.5em;
-  line-height: 1.5;
-  margin-top: 0;
 }
 
 button {
   border-radius: 8px;
   border: 1px solid transparent;
-  margin-top: 18px;
   padding: 0.6em 2.2em;
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #ffcc00aa;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #d1aa0c;
 }
+
 button:hover {
-  border-color: #1d1701aa;
+  background-color: #d6ac04aa;
 }
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+
+#logo-yellow {
+  transition: filter 300ms;
+  height: 48px;
 }
 
 #logo-yellow:hover {
   filter: drop-shadow(0 0 2em #ffcc00aa);
   width: auto;
-}
-#logo-yellow {
-  transition: filter 300ms;
-  height: 48px;
 }
 
 @media (prefers-color-scheme: light) {
@@ -80,10 +65,9 @@ button:focus-visible {
     color: #213547;
     background-color: #ffffff;
   }
-  a:hover {
+
+  nav a:hover,
+  header a:hover {
     color: #ffcc00aa;
-  }
-  button {
-    background-color: #f9f9f9;
   }
 }
